--- a/SageMaker Project.ipynb
+++ b/SageMaker Project.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1907,7 +1907,14 @@
    "outputs": [],
    "source": [
     "# TODO: Convert test_review into a form usable by the model and save the results in test_data\n",
-    "test_data, test_data_len = convert_and_pad(word_dict, review_to_words(test_review))"
+    "test_review_words = review_to_words(test_review)     # splits reviews to words\n",
+    "review_X, review_len = convert_and_pad(word_dict, test_review_words)   # pad review\n",
+    "\n",
+    "data_pack = np.hstack((review_len, review_X))\n",
+    "data_pack = data_pack.reshape(1, -1)\n",
+    "\n",
+    "test_data = torch.from_numpy(data_pack)\n",
+    "test_data = test_data.to(device)"
    ]
   },
   {
